--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <button class="division-btn" data-city="Khulna">Khulna</button>
         <button class="division-btn" data-city="Barisal">Barisal</button>
         <button class="division-btn" data-city="Rangpur">Rangpur</button>
+        <a href="sehri.html" style="text-decoration: none;">
+    <button class="division-btn" style="opacity:0.8; border:1px solid #444; padding:0.2rem 0.6rem;">🌙 Sehri</button>
+</a>
     </div>
 
     <script>
