--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                     const month = date.getMonth() + 1;
                     const year = date.getFullYear();
 
-                    const url = `https://api.aladhan.com/v1/timings/${day}-${month}-${year}?latitude=${coords.lat}&longitude=${coords.lon}&method=1`;
+                    const url = `https://api.aladhan.com/v1/timings/${day}-${month}-${year}?latitude=${coords.lat}&longitude=${coords.lon}&method=1&tune=0,0,0,0,0,0,2,0,0`; 
+// The 7th value (2) adds 2 minutes to Maghrib
 
                     const response = await fetch(url);
                     const data = await response.json();
