--- a/sehri.html
+++ b/sehri.html
@@ -129,150 +129,177 @@
     </div>
 
     <script>
-        (function() {
-            const cityCoords = {
-                'Dhaka':      { lat: 23.8103, lon: 90.4125 },
-                'Chittagong': { lat: 22.3569, lon: 91.7832 },
-                'Sylhet':     { lat: 24.8949, lon: 91.8687 },
-                'Mymensingh': { lat: 24.7471, lon: 90.4203 },
-                'Rajshahi':   { lat: 24.3636, lon: 88.6241 },
-                'Khulna':     { lat: 22.8456, lon: 89.5403 },
-                'Barisal':    { lat: 22.7010, lon: 90.3535 },
-                'Rangpur':    { lat: 25.7468, lon: 89.2508 }
-            };
+(function() {
+    const cityCoords = {
+        'Dhaka':      { lat: 23.8103, lon: 90.4125 },
+        'Chittagong': { lat: 22.3569, lon: 91.7832 },
+        'Sylhet':     { lat: 24.8949, lon: 91.8687 },
+        'Mymensingh': { lat: 24.7471, lon: 90.4203 },
+        'Rajshahi':   { lat: 24.3636, lon: 88.6241 },
+        'Khulna':     { lat: 22.8456, lon: 89.5403 },
+        'Barisal':    { lat: 22.7010, lon: 90.3535 },
+        'Rangpur':    { lat: 25.7468, lon: 89.2508 }
+    };
 
-            const cityDisplay = document.getElementById('cityDisplay');
-            const timerDisplay = document.getElementById('timerDisplay');
-            const fajrTimeLabel = document.getElementById('fajrTimeLabel');
-            const divisionButtons = document.querySelectorAll('.division-btn[data-city]'); // exclude the Iftar link
+    const cityDisplay = document.getElementById('cityDisplay');
+    const timerDisplay = document.getElementById('timerDisplay');
+    const fajrTimeLabel = document.getElementById('fajrTimeLabel');
+    const divisionButtons = document.querySelectorAll('.division-btn[data-city]');
 
-            let currentCity = 'Dhaka';
-            let currentFajrTimestamp = null;
-            let countdownInterval = null;
-            let apiRequestInProgress = false;
+    let currentCity = 'Dhaka';
+    let currentFajrTimestamp = null;
+    let countdownInterval = null;
+    let apiRequestInProgress = false;
 
-            function formatTimeFromSeconds(totalSeconds) {
-                if (totalSeconds < 0) totalSeconds = 0;
-                const hrs = Math.floor(totalSeconds / 3600);
-                const mins = Math.floor((totalSeconds % 3600) / 60);
-                const secs = totalSeconds % 60;
-                return `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
-            }
+    function formatTimeFromSeconds(totalSeconds) {
+        if (totalSeconds < 0) totalSeconds = 0;
+        const hrs = Math.floor(totalSeconds / 3600);
+        const mins = Math.floor((totalSeconds % 3600) / 60);
+        const secs = totalSeconds % 60;
+        return `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+    }
 
-            function updateCountdownDisplay() {
-                if (!currentFajrTimestamp) {
-                    timerDisplay.textContent = '--:--:--';
-                    return;
-                }
+    function updateCountdownDisplay() {
+        if (!currentFajrTimestamp) {
+            timerDisplay.textContent = '--:--:--';
+            return;
+        }
+        const now = Date.now();
+        const diffSeconds = Math.floor((currentFajrTimestamp - now) / 1000);
+        if (diffSeconds <= 0) {
+            timerDisplay.textContent = '00:00:00';
+        } else {
+            timerDisplay.textContent = formatTimeFromSeconds(diffSeconds);
+        }
+    }
+
+    async function fetchFajrTime(city) {
+        const coords = cityCoords[city];
+        if (!coords) return;
+        if (apiRequestInProgress) return;
+        apiRequestInProgress = true;
+
+        try {
+            const date = new Date();
+            const day = date.getDate();
+            const month = date.getMonth() + 1;
+            const year = date.getFullYear();
+
+            // Use method=1 (Karachi) and optionally add tune if needed (here we keep it neutral)
+            const url = `https://api.aladhan.com/v1/timings/${day}-${month}-${year}?latitude=${coords.lat}&longitude=${coords.lon}&method=1`;
+
+            const response = await fetch(url);
+            const data = await response.json();
+
+            if (data.code === 200 && data.data?.timings) {
+                const fajrTimeStr = data.data.timings.Fajr;
+                const [hours, minutes] = fajrTimeStr.split(':').map(Number);
+
+                // Build timestamp for today's Fajr in Bangladesh time (UTC+6)
+                let fajrTimestamp = new Date(Date.UTC(year, month-1, day, hours-6, minutes)).getTime();
                 const now = Date.now();
-                const diffSeconds = Math.floor((currentFajrTimestamp - now) / 1000);
-                if (diffSeconds <= 0) {
-                    timerDisplay.textContent = '00:00:00';
-                } else {
-                    timerDisplay.textContent = formatTimeFromSeconds(diffSeconds);
+
+                // If today's Fajr has already passed, set target to tomorrow's Fajr
+                if (fajrTimestamp < now) {
+                    // Move to next day
+                    const tomorrow = new Date(now + 24*60*60*1000);
+                    const tomorrowYear = tomorrow.getUTCFullYear();
+                    const tomorrowMonth = tomorrow.getUTCMonth();
+                    const tomorrowDay = tomorrow.getUTCDate();
+
+                    fajrTimestamp = new Date(Date.UTC(tomorrowYear, tomorrowMonth, tomorrowDay, hours-6, minutes)).getTime();
                 }
-            }
 
-            async function fetchFajrTime(city) {
-                const coords = cityCoords[city];
-                if (!coords) return;
-                if (apiRequestInProgress) return;
-                apiRequestInProgress = true;
+                currentFajrTimestamp = fajrTimestamp;
 
-                try {
-                    const date = new Date();
-                    const day = date.getDate();
-                    const month = date.getMonth() + 1;
-                    const year = date.getFullYear();
+                // Display the time nicely
+                const period = hours >= 12 ? 'PM' : 'AM';
+                const displayHour = hours % 12 || 12;
+                const minuteStr = minutes.toString().padStart(2,'0');
+                fajrTimeLabel.textContent = `Sehri ends: ${displayHour}:${minuteStr} ${period} (${city})`;
+                cityDisplay.textContent = city;
 
-                    const url = `https://api.aladhan.com/v1/timings/${day}-${month}-${year}?latitude=${coords.lat}&longitude=${coords.lon}&method=2`;
-                    const response = await fetch(url);
-                    const data = await response.json();
-
-                    if (data.code === 200 && data.data?.timings) {
-                        const fajrTimeStr = data.data.timings.Fajr; // "HH:MM"
-                        const [hours, minutes] = fajrTimeStr.split(':').map(Number);
-
-                        // Build UTC timestamp for Bangladesh time (UTC+6)
-                        const bangladeshDate = new Date(Date.UTC(year, month-1, day, hours-6, minutes));
-                        currentFajrTimestamp = bangladeshDate.getTime();
-
-                        const period = hours >= 12 ? 'PM' : 'AM';
-                        const displayHour = hours % 12 || 12;
-                        const minuteStr = minutes.toString().padStart(2,'0');
-                        fajrTimeLabel.textContent = `Sehri ends: ${displayHour}:${minuteStr} ${period} (${city})`;
-                        cityDisplay.textContent = city;
-
-                        updateCountdownDisplay();
-                    } else {
-                        throw new Error('Invalid API response');
-                    }
-                } catch (error) {
-                    // Fallback: approximate Fajr as 5:00 AM (UTC+6)
-                    const fallbackHours = 5;
-                    const fallbackMinutes = 0;
-                    const d = new Date();
-                    const year = d.getFullYear();
-                    const month = d.getMonth();
-                    const day = d.getDate();
-                    const fallbackTimestamp = Date.UTC(year, month, day, fallbackHours-6, fallbackMinutes);
-                    currentFajrTimestamp = fallbackTimestamp;
-                    fajrTimeLabel.textContent = `Sehri ~5:00 AM (fallback)`;
-                    cityDisplay.textContent = city;
-                    updateCountdownDisplay();
-                } finally {
-                    apiRequestInProgress = false;
-                }
-            }
-
-            function setActiveCity(city) {
-                if (!cityCoords[city]) return;
-                currentCity = city;
-
-                divisionButtons.forEach(btn => {
-                    const btnCity = btn.getAttribute('data-city');
-                    btn.classList.toggle('active', btnCity === city);
-                });
-
-                fetchFajrTime(city);
-            }
-
-            divisionButtons.forEach(btn => {
-                btn.addEventListener('click', (e) => {
-                    const city = e.target.getAttribute('data-city');
-                    if (city && city !== currentCity) {
-                        setActiveCity(city);
-                    }
-                });
-            });
-
-            function tick() {
                 updateCountdownDisplay();
+            } else {
+                throw new Error('Invalid API response');
+            }
+        } catch (error) {
+            console.warn('API failed, using smart fallback');
+            // Fallback: use 5:00 AM, but if it's past 5 AM today, use tomorrow's 5 AM
+            const now = new Date();
+            const year = now.getFullYear();
+            const month = now.getMonth();
+            const day = now.getDate();
+            const fallbackHours = 5;
+            const fallbackMinutes = 0;
+
+            let fallbackTimestamp = new Date(Date.UTC(year, month, day, fallbackHours-6, fallbackMinutes)).getTime();
+            if (fallbackTimestamp < Date.now()) {
+                // Move to tomorrow
+                const tomorrow = new Date(Date.now() + 24*60*60*1000);
+                const tYear = tomorrow.getUTCFullYear();
+                const tMonth = tomorrow.getUTCMonth();
+                const tDay = tomorrow.getUTCDate();
+                fallbackTimestamp = new Date(Date.UTC(tYear, tMonth, tDay, fallbackHours-6, fallbackMinutes)).getTime();
             }
 
-            function init() {
-                setActiveCity('Dhaka');
-                if (countdownInterval) clearInterval(countdownInterval);
-                countdownInterval = setInterval(tick, 1000);
-                tick();
-            }
+            currentFajrTimestamp = fallbackTimestamp;
+            fajrTimeLabel.textContent = `Sehri ~5:00 AM (fallback)`;
+            cityDisplay.textContent = city;
+            updateCountdownDisplay();
+        } finally {
+            apiRequestInProgress = false;
+        }
+    }
 
-            init();
+    function setActiveCity(city) {
+        if (!cityCoords[city]) return;
+        currentCity = city;
 
-            // Refresh at midnight
-            function scheduleNextDayRefresh() {
-                const now = new Date();
-                const night = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, 0, 5, 0);
-                const msToMidnight = night.getTime() - now.getTime();
-                if (msToMidnight > 0) {
-                    setTimeout(() => {
-                        fetchFajrTime(currentCity);
-                        scheduleNextDayRefresh();
-                    }, msToMidnight);
-                }
+        divisionButtons.forEach(btn => {
+            const btnCity = btn.getAttribute('data-city');
+            btn.classList.toggle('active', btnCity === city);
+        });
+
+        fetchFajrTime(city);
+    }
+
+    divisionButtons.forEach(btn => {
+        btn.addEventListener('click', (e) => {
+            const city = e.target.getAttribute('data-city');
+            if (city && city !== currentCity) {
+                setActiveCity(city);
             }
-            scheduleNextDayRefresh();
-        })();
+        });
+    });
+
+    function tick() {
+        updateCountdownDisplay();
+    }
+
+    function init() {
+        setActiveCity('Dhaka');
+        if (countdownInterval) clearInterval(countdownInterval);
+        countdownInterval = setInterval(tick, 1000);
+        tick();
+    }
+
+    init();
+
+    // Refresh at midnight to get next day's time
+    function scheduleNextDayRefresh() {
+        const now = new Date();
+        const night = new Date(now.getFullYear(), now.getMonth(), now.getDate() + 1, 0, 5, 0);
+        const msToMidnight = night.getTime() - now.getTime();
+        if (msToMidnight > 0) {
+            setTimeout(() => {
+                fetchFajrTime(currentCity);
+                scheduleNextDayRefresh();
+            }, msToMidnight);
+        }
+    }
+    scheduleNextDayRefresh();
+})();
     </script>
     <div class="note">sehri ends at fajr · times via Aladhan API (ISNA) · fallback 5:00 AM</div>
 </body>
